Fix mobile logo sizing - reduce height on smaller screens

--- a/styles/main.css
+++ b/styles/main.css
@@ -741,6 +741,11 @@ p:last-child {
         height: var(--header-height-mobile);
     }
 
+    .logo-img {
+        height: 35px;
+        width: auto;
+    }
+
     .nav {
         display: none;
     }
